--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,15 +74,15 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   # fonts:
-  #   - family: Schyler
+  #   - family: InstrumentSans
   #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
+  #       - asset: fonts/InstrumentSans-Regular.ttf
+  #         weight: 400
+  #       - asset: fonts/InstrumentSans-Medium.ttf
+  #         weight: 500
+  #       - asset: fonts/InstrumentSans-SemiBold.ttf
+  #         weight: 600
+  #       - asset: fonts/InstrumentSans-Bold.ttf
   #         weight: 700
   #
   # For details regarding fonts from package dependencies,
